# bookish-eureka

./: .gitignore  README.md  async_client.py  async_serv.py  client.py  database.py  descriptors.py  gui_client.py  handlers.py  metaclasses.py  models.py  pyproject.toml  requirements.txt  server.py  settings.toml  start_client.py  task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  test.py  test_client.py  test_server.py  test_utils.py  todo
client/: client.py  gui_client.py
common/: common_mixin.py  descriptors.py  metaclasses.py  settings.py  utils.py
docs/: .buildinfo  client.html  common.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  server.html
docs/.doctrees/: client.doctree  common.doctree  environment.pickle  index.doctree  modules.doctree  server.doctree
docs/_modules/: index.html  peewee.html
docs/_modules/client/: client.html  gui_client.html
docs/_modules/common/: descriptors.html  metaclasses.html  utils.html
docs/_modules/server/: handlers.html  models.html  server.html
logs/: client_log_config.py  logger_decos.py  server.log.2022-10-18  server.log.2022-11-02  server_log_config.py
server/: handlers.py  models.py  server.py
source/: client.rst  common.rst  conf.py  index.rst  server.rst
