[tool.poetry]
name = "bookish-eureka"
version = "0.0.1"
description = ""
authors = ["Yoshi"]
readme = "README.md"
packages = [{include = "bookish_eureka"}]

[tool.poetry.dependencies]
python = "^3.10"
pysimplegui = "^4.60.4"
asyncio = "^3.4.3"
peewee = "^3.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
